--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -31,21 +31,21 @@ jobs:
             type=raw,value={{date 'YYYYMMDD'}},prefix=${{ github.ref_name }}-
 
       - name: Set the build date project toml file
-        uses: sandstromviktor/toml-editor@v2.0.0
+        uses: sandstromviktor/toml-editor@2.0.0
         with:
           file: "pyproject.toml"
           key: "tool.serve.build-date"
           value: ${{ env.BUILD_DATE }}
 
       - name: Set the git tag or branch name in the project toml file
-        uses: sandstromviktor/toml-editor@v2.0.0
+        uses: sandstromviktor/toml-editor@2.0.0
         with:
           file: "pyproject.toml"
           key: "tool.serve.gitref"
           value: ${{ github.ref_name }}
 
       - name: Set the image tag in the project toml file
-        uses: sandstromviktor/toml-editor@v2.0.0
+        uses: sandstromviktor/toml-editor@2.0.0
         with:
           file: "pyproject.toml"
           key: "tool.serve.imagetag"
