--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,9 +22,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set current date as env variable
-        run: echo "BUILD_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-
       - name: Docker meta
         uses: docker/metadata-action@v4
         id: meta
@@ -32,27 +29,6 @@ jobs:
           images: ${{ matrix.image }}
           tags: |
             type=raw,value={{date 'YYYYMMDD'}}
-
-      - name: Set the build date project toml file
-        uses: sandstromviktor/toml-editor@2.0.0
-        with:
-          file: "pyproject.toml"
-          key: "tool.serve.build-date"
-          value: ${{ env.BUILD_DATE }}
-
-      - name: Set the git tag or branch name in the project toml file
-        uses: sandstromviktor/toml-editor@2.0.0
-        with:
-          file: "pyproject.toml"
-          key: "tool.serve.gitref"
-          value: ${{ github.ref_name }}
-
-      - name: Set the image tag in the project toml file
-        uses: sandstromviktor/toml-editor@2.0.0
-        with:
-          file: "pyproject.toml"
-          key: "tool.serve.imagetag"
-          value: ${{ steps.meta.outputs.version }}
 
       - name: Log in
         uses: docker/login-action@v1
@@ -65,7 +41,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: True
+          push: "${{ github.event_name != 'pull_request' }}"
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           file: ${{ matrix.dockerfile }}
