--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -70,7 +70,7 @@ jobs:
         with:
           images: ${{ matrix.image }}
           tags: |
-            type=raw,value={{date 'YYYYMMDD'}}
+            type=raw,value=${{ github.ref_name }}
 
       - name: Log in
         uses: docker/login-action@v1
