--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Run linter black
         uses: psf/black@stable
         with:
-          options: "-l 120 --check"
+          options: "--check"
 
       - name: Run hadolint
         uses: hadolint/hadolint-action@v3.1.0
