Make this repo setup for trunk-based development

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,11 @@ name: CI
 
 on:
   push:
-    branches: [ "develop" ]
+    branches-ignore: [ "main" ]
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    branches: [ "*" ]
     paths-ignore:
       - '**.md'
 
