Add linter isort to project and reformat imports.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Run isort  # pip-based (flexible)
+        run: |
+          pip install isort
+          isort . --check --diff --profile black
+
       - name: Run linter black
         uses: psf/black@stable
         with:
