--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,7 @@ on:
     paths-ignore:
       - '**.md'
   pull_request:
+    types: [opened, reopened]
     branches: [ "*" ]
     paths-ignore:
       - '**.md'
