--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,7 +72,7 @@ jobs:
             pip install -r requirements.txt
 
       - name: Run tests
-        run: python -m unittest discover -s tests
+        run: python -m unittest discover -s tests/unit
 
 
   build:
